--- a/analyze-vegas-implied-probabilities.ipynb
+++ b/analyze-vegas-implied-probabilities.ipynb
@@ -153,12 +153,14 @@
     }
    ],
    "source": [
+    "import sys, os; sys.path.append('/'.join(os.getcwd().split('/')[:-1]))  # add parent dir to path\n",
+    "\n",
     "import datetime\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from itertools import product\n",
     "from scipy import stats\n",
-    "from odds_utils import odds_parser, odds_parser_prob\n",
+    "from pton.parsers import odds_parser, odds_parser_prob\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "filename = r'data/nfl odds 2020-21.csv'\n",
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +439,7 @@
        "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>SanFrancisco</td>\n",
-       "      <td>Washingtom</td>\n",
+       "      <td>Washington</td>\n",
        "      <td>-145.0</td>\n",
        "      <td>125.0</td>\n",
        "      <td>0.591837</td>\n",
@@ -498,7 +500,7 @@
        "1003       Seattle        NYJets -1200.0   750.0  0.923077  0.117647   \n",
        "1004    LAChargers       Atlanta  -120.0   100.0  0.545455  0.500000   \n",
        "1005    NewOrleans  Philadelphia  -360.0   300.0  0.782609  0.250000   \n",
-       "1006  SanFrancisco    Washingtom  -145.0   125.0  0.591837  0.444444   \n",
+       "1006  SanFrancisco    Washington  -145.0   125.0  0.591837  0.444444   \n",
        "1007       Buffalo    Pittsburgh  -130.0   110.0  0.565217  0.476190   \n",
        "\n",
        "          Hold    IP_Fav    IP_Dog  Home_Winner  Fav_Winner  \n",
@@ -517,7 +519,7 @@
        "[1008 rows x 18 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +677,7 @@
        "0.0259"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,12 +690,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FiveThirtyEight 2015-2020"
+    "FiveThirtyEight 2015-2018"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +704,7 @@
        "0.0329"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,11 +720,12 @@
    "source": [
     "# Comparing to FiveThirtyEight Models\n",
     "https://projects.fivethirtyeight.com/checking-our-work/nfl-games/\n",
-    "- The average percent deviation (based on 10% to 90% buckets)\n",
+    "- The average percent deviation (based on 10% to 90% buckets, n=19)\n",
     "  - **FiveThirtyEight 2015-2018**: `0.0329`\n",
     "  - **Vegas 2017-2020**: `0.0259`\n",
     "- Overall, Vegas closing line is $0.7\\%$ more efficient than FiveThirtyEight, reflecting the efficiency of betting markets\n",
-    "- For a more rigorous comparison, we could look at the Brier Score (effectively MSE of the predictions)"
+    "- For a more rigorous comparison, we could look at the Brier Score (effectively MSE of the predictions)\n",
+    "- Vegas's edge over Elo (FiveThirtyEight's model), makes sense given that Elo only takes into consideration the date, final score, and location of a game: https://fivethirtyeight.com/features/introducing-nfl-elo-ratings/"
    ]
   },
   {
