--- a/bettingpros-consensus-rankings.ipynb
+++ b/bettingpros-consensus-rankings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bettingpros.com posts bets where their consensus projections (typically sourced from ESPN, CBS, NFL.com, and numberFire) deviate the most from the lines offered across PointsBet, William Hill, DraftKings, FanDuel, and MGM. Importantly, these are versus the closing lines so these projections might actually be valuable depending on how much the projections and underlying opening lines most. \n",
+    "Bettingpros.com posts bets where their consensus projections (typically sourced from ESPN, CBS, NFL.com, and numberFire) deviate the most from the lines offered across PointsBet, William Hill, DraftKings, FanDuel, and MGM. Importantly, these are versus the closing lines so these projections might actually be valuable depending on how much the projections and underlying opening lines differ. \n",
     "\n",
     "By checking the top $50$ most highly recommended player prop bets from Bettingpros across the first $16$ weeks of the season, we can assess whether their performance is different from random. \n",
     "\n",
